--- a/books.html
+++ b/books.html
@@ -4,96 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Books — Darren Steptoe</title>
-  <meta name="description" content="When Good Intentions Fail — coming soon." />
+  <meta name="description" content="When Good Intentions Fail — forthcoming book by Darren Steptoe." />
   <link rel="stylesheet" href="styles.css" />
-
-  <style>
-    /* Two-column page layout: left flows, right holds cover.
-       This avoids the tall cover creating dead space under the title. */
-    .book-layout{
-      display: grid;
-      grid-template-columns: 1fr 320px;
-      gap: var(--s5);
-      align-items: start;
-    }
-
-    .book-intro{
-      margin-bottom: var(--s4);
-    }
-
-    .cover-wrap{
-      display: grid;
-      gap: var(--s2);
-      align-items: start;
-      justify-items: end;
-      position: sticky;
-      top: 96px; /* sits below your sticky nav */
-    }
-
-    .cover-placeholder{
-      width: 320px;
-      max-width: 100%;
-      aspect-ratio: 2 / 3;
-      border-radius: var(--radius);
-      border: 1px solid var(--faint);
-      background:
-        linear-gradient(to bottom, rgba(255,255,255,.72), rgba(255,255,255,.42)),
-        repeating-linear-gradient(
-          135deg,
-          rgba(31,77,58,.10) 0 14px,
-          rgba(31,77,58,.04) 14px 28px
-        );
-      display: grid;
-      place-items: center;
-      font-weight: 900;
-      letter-spacing: .08em;
-      text-transform: uppercase;
-      font-size: 12px;
-      color: var(--muted);
-      text-align: center;
-      padding: var(--s3);
-    }
-
-    .reading{
-      padding: var(--s4);
-      border-radius: var(--radius);
-      border: 1px solid var(--faint);
-      background: var(--panel-soft);
-    }
-
-    .reading p{
-      margin: 0 0 var(--s2);
-      color: rgba(21,21,21,.78);
-    }
-    .reading p:last-child{ margin-bottom: 0; }
-
-    .toc-grid{
-      display: grid;
-      gap: var(--s3);
-    }
-
-    @media (max-width: 980px){
-      .book-layout{
-        grid-template-columns: 1fr 280px;
-        gap: var(--s4);
-      }
-      .cover-placeholder{ width: 280px; }
-    }
-
-    @media (max-width: 860px){
-      .book-layout{
-        grid-template-columns: 1fr;
-        gap: var(--s4);
-      }
-      .cover-wrap{
-        position: static;
-        justify-items: start;
-      }
-      .cover-placeholder{
-        width: min(360px, 100%);
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -117,122 +29,111 @@
     <section class="section">
       <div class="container">
 
-        <div class="book-layout">
-          <!-- LEFT: Title + content (no dead space) -->
-          <div>
-            <div class="book-intro">
-              <p class="kicker">Coming soon</p>
-              <h1 class="page-title">When Good Intentions Fail</h1>
-              <p class="section-note">How Institutions Quietly Transfer Burden</p>
-            </div>
-
-            <div class="stack">
-              <article class="item">
-                <h3>What this book is</h3>
-                <p>
-                  This book examines a recurring pattern in values-driven institutions:
-                  when structure remains incomplete, responsibility does not disappear.
-                  It relocates — into ambiguity, into informal expectations, and eventually
-                  into the people most willing to carry it.
-                </p>
-                <p>
-                  It is written for people asked to translate unclear direction, absorb risk
-                  without authority, and sustain systems whose language remains aspirational
-                  while their design stays unresolved.
-                </p>
-              </article>
-
-              <article class="item">
-                <h3>Excerpt</h3>
-                <div class="reading">
-                  <p>
-                    Most institutions begin with language. Mission statements. Values decks.
-                    Guiding principles. These words appear early, before systems harden and
-                    before anyone knows how the work will feel once it is underway.
-                  </p>
-                  <p>
-                    That language matters. It attracts people who care. It establishes tone.
-                    It creates alignment before anything concrete exists to test it.
-                  </p>
-                  <p>
-                    But language cannot carry weight.
-                  </p>
-                  <p>
-                    At some point, values must become structure — roles, authority, process,
-                    and protection. When that translation never fully occurs, values begin
-                    doing work they were never designed to do.
-                  </p>
-                </div>
-              </article>
-
-              <article class="item">
-                <h3>Structure</h3>
-                <div class="toc-grid">
-                  <div class="panel">
-                    <div class="panel-label">Part I</div>
-                    <div class="panel-meta">
-                      Values Are Not Structure · Ambiguity Is a Design Choice ·
-                      The Invisible Labor That Holds Things Together
-                    </div>
-                  </div>
-
-                  <div class="panel">
-                    <div class="panel-label">Part II</div>
-                    <div class="panel-meta">
-                      Collaboration Without Authority · Urgency Changes What Values Mean ·
-                      When Good Intentions Meet Incentives · Drift Feels Like Stability
-                    </div>
-                  </div>
-
-                  <div class="panel">
-                    <div class="panel-label">Part III</div>
-                    <div class="panel-meta">
-                      Moral Language as Management · The Cost of Being Reliable ·
-                      Exhaustion as a Signal · How Burden Finds a Carrier
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="item">
-                <h3>Release</h3>
-                <p>
-                  The book is currently unpublished.
-                  Notifications will be sent when it is released.
-                </p>
-                <div class="item-actions">
-                  <a
-                    class="btn small"
-                    href="https://docs.google.com/forms/d/e/1FAIpQLSd6dzvBJ4JIcK7pOP0wM3skn8f-k69Vi5kWyw5NfNr6HsIw5w/viewform?usp=publish-editor"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                  >
-                    Get notified
-                  </a>
-                </div>
-              </article>
-
-              <article class="item">
-                <h3>Author</h3>
-                <p>
-                  Darren Steptoe works across film, writing, and independent projects,
-                  with a focus on how institutional design shapes outcomes and transfers cost.
-                </p>
-              </article>
-            </div>
-
-            <footer class="footer">
-              <p>© <span id="year"></span> Darren Steptoe</p>
-            </footer>
-          </div>
-
-          <!-- RIGHT: Cover (does not affect left flow) -->
-          <aside class="cover-wrap" aria-label="Book cover preview">
-            <div class="cover-placeholder" role="img" aria-label="Book cover placeholder">
-              Cover preview
-            </div>
-          </aside>
+        <div class="section-head">
+          <p class="kicker">Forthcoming</p>
+          <h1 class="page-title">When Good Intentions Fail</h1>
+          <p class="section-note">How Institutions Quietly Transfer Burden</p>
         </div>
+
+        <div class="stack">
+
+          <article class="item">
+            <h3>Overview</h3>
+            <p>
+              This book examines a recurring pattern in values-driven institutions:
+              when structure remains incomplete, responsibility does not disappear.
+              It relocates — into ambiguity, into informal expectations, and eventually
+              into the people most willing to carry it.
+            </p>
+            <p>
+              It is written for people asked to translate unclear direction, absorb risk
+              without authority, and sustain systems whose language remains aspirational
+              while their design stays unresolved.
+            </p>
+          </article>
+
+          <article class="item">
+            <h3>Excerpt</h3>
+            <div class="reading">
+              <p>
+                Most institutions begin with language. Mission statements. Values decks.
+                Guiding principles. These words appear early, before systems harden and
+                before anyone knows how the work will feel once it is underway.
+              </p>
+              <p>
+                That language matters. It attracts people who care. It establishes tone.
+                It creates alignment before anything concrete exists to test it.
+              </p>
+              <p>
+                But language cannot carry weight.
+              </p>
+              <p>
+                At some point, values must become structure — roles, authority, process,
+                and protection. When that translation never fully occurs, values begin
+                doing work they were never designed to do.
+              </p>
+            </div>
+          </article>
+
+          <article class="item">
+            <h3>Structure</h3>
+
+            <div class="panel">
+              <strong>Part I</strong><br />
+              Values Are Not Structure · Ambiguity Is a Design Choice ·
+              The Invisible Labor That Holds Things Together
+            </div>
+
+            <div class="panel">
+              <strong>Part II</strong><br />
+              Collaboration Without Authority · Urgency Changes What Values Mean ·
+              When Good Intentions Meet Incentives · Drift Feels Like Stability
+            </div>
+
+            <div class="panel">
+              <strong>Part III</strong><br />
+              Moral Language as Management · The Cost of Being Reliable ·
+              Exhaustion as a Signal · How Burden Finds a Carrier
+            </div>
+          </article>
+
+          <article class="item">
+            <h3>Release</h3>
+            <p>
+              The book is currently unpublished. Notifications will be sent when it is released.
+            </p>
+            <div class="item-actions">
+              <a
+                class="btn small"
+                href="https://docs.google.com/forms/d/e/1FAIpQLSd6dzvBJ4JIcK7pOP0wM3skn8f-k69Vi5kWyw5NfNr6HsIw5w/viewform?usp=publish-editor"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Get notified
+              </a>
+            </div>
+          </article>
+
+          <article class="item">
+            <h3>Author</h3>
+            <p>
+              Darren Steptoe works across film, writing, and independent projects,
+              with a focus on how institutional design shapes outcomes and transfers cost.
+            </p>
+          </article>
+
+          <article class="item">
+            <h3>Cover</h3>
+            <div class="panel" aria-label="Book cover placeholder">
+              Cover preview forthcoming
+            </div>
+          </article>
+
+        </div>
+
+        <footer class="footer">
+          <p>© <span id="year"></span> Darren Steptoe</p>
+        </footer>
 
       </div>
     </section>
