--- a/services.html
+++ b/services.html
@@ -78,74 +78,6 @@
       </div>
     </section>
 
-    <section class="panel" aria-label="Campaign Consulting">
-      <h2 class="h2">Political Consulting</h2>
-
-      <div class="openRow" aria-label="Availability">
-        <span class="openDot" aria-hidden="true"></span>
-        <span>Open to work</span>
-      </div>
-
-      <p>
-        I support campaigns, committees, and independent candidates with practical, field-tested strategy. If you need a clean plan,
-        strong execution, and someone who can build the infrastructure and train the team, I can help.
-      </p>
-
-      <ul class="links">
-        <li>Win number + targeting (what it takes to win, who to talk to, and how often)</li>
-        <li>Field plan (persuasion → GOTV), universes, turf cutting, and staging locations</li>
-        <li>Volunteer &amp; staff training (canvass, phones, data entry, packet build)</li>
-        <li>Scripts and message discipline (doors, phones, texts, digital)</li>
-        <li>GOTV operations (chase, visibility, poll coverage planning)</li>
-        <li>Basic comms support (social content guidance, rapid response structure)</li>
-        <li>Office systems (weekly goals, pipeline, reporting, and accountability)</li>
-      </ul>
-    </section>
-
-    <section class="panel" aria-label="Pricing">
-      <h2 class="h2">Pricing</h2>
-      <p class="muted small">Simple ranges to set expectations. Final pricing depends on scope, travel, deliverables, and timeline.</p>
-
-      <h3 class="h3">Wedding Films</h3>
-      <div class="pricingPlain">
-        <div class="pricingLine"><strong>Bronze</strong> — $2,400 <span class="muted small">• up to 6 hours • 5–7 min highlight • 14-day turnaround</span></div>
-        <div class="pricingLine"><strong>Silver</strong> — $3,200 <span class="muted small">• up to 8 hours • full speeches edit • 6–8 min cinematic film</span></div>
-        <div class="pricingLine"><strong>Gold</strong> — $4,200 <span class="muted small">• up to 10 hours • multi-cam ceremony • drone + social teaser</span></div>
-        <div class="pricingLine"><strong>Platinum</strong> — $5,200 <span class="muted small">• up to 12 hours • specialty cameras • ceremony + speeches • 48-hr teaser • 7-day delivery</span></div>
-        <div class="pricingLine"><strong>Additional Hour</strong> — $125 <span class="muted small">• applied beyond the booked package</span></div>
-      </div>
-
-      <h3 class="h3">Event &amp; Promotional</h3>
-      <div class="pricingPlain">
-        <div class="pricingLine"><strong>Half Day</strong> — $600 <span class="muted small">• up to 4 hours • 60–90 sec highlight</span></div>
-        <div class="pricingLine"><strong>Full Day</strong> — $1,000 <span class="muted small">• up to 8 hours • 2–3 min highlight</span></div>
-      </div>
-
-      <h3 class="h3">Corporate &amp; Small Business</h3>
-      <div class="pricingPlain">
-        <div class="pricingLine"><strong>Brand Promo</strong> — $1,200 <span class="muted small">• interview + b-roll • 2–3 min film • social cut</span></div>
-        <div class="pricingLine"><strong>Executive Interview</strong> — $850 <span class="muted small">• up to 2 hours • 1–2 min polished edit</span></div>
-        <div class="pricingLine"><strong>Monthly Content</strong> — from $2,500 <span class="muted small">• 1 filming day • 3–5 edited videos</span></div>
-        <div class="pricingLine"><strong>Custom Package</strong> — quote <span class="muted small">• multi-day / multi-location / recurring</span></div>
-      </div>
-
-      <h3 class="h3">Documentary &amp; Editing</h3>
-      <div class="pricingPlain">
-        <div class="pricingLine"><strong>Editing</strong> — $85/hr <span class="muted small">• 5-hour minimum per project phase</span></div>
-        <div class="pricingLine"><strong>Full Documentary Support</strong> — quote <span class="muted small">• development → post support tailored to scope</span></div>
-      </div>
-
-      <h3 class="h3">Political Consulting</h3>
-      <div class="pricingPlain">
-        <div class="pricingLine"><strong>Strategy Intensive (1 Hour)</strong> — $250 <span class="muted small">• win number, targeting, field plan, next steps</span></div>
-        <div class="pricingLine"><strong>Municipal Retainer</strong> — $3,000–6,000 / month <span class="muted small">• plan + training + reporting cadence</span></div>
-        <div class="pricingLine"><strong>State Legislative Retainer</strong> — $5,000–10,000 / month <span class="muted small">• ops buildout + weekly goals + GOTV</span></div>
-        <div class="pricingLine"><strong>Congressional Retainer</strong> — $10,000–20,000+ / month <span class="muted small">• full-scale field + ops systems</span></div>
-      </div>
-    </section>
-
-    <hr class="sectionRule" aria-hidden="true">
-
     <section class="panel" aria-label="Smart Intake Form">
       <h2 class="h2">Smart Intake Form</h2>
       <p class="muted small">
@@ -299,16 +231,185 @@
       </form>
     </section>
 
+    <section class="panel" aria-label="Political Consulting">
+      <h2 class="h2">Political Consulting</h2>
+
+      <div class="openRow" aria-label="Availability">
+        <span class="openDot" aria-hidden="true"></span>
+        <span>Open to work</span>
+      </div>
+
+      <p>
+        I support campaigns, committees, and independent candidates with practical, field-tested strategy. If you need a clean plan, strong execution, and someone who can build the infrastructure and train the team, I can help.
+      </p>
+
+      <ul class="links">
+        <li>Win number + targeting (what it takes to win, who to talk to, and how often)</li>
+        <li>Field plan (persuasion → GOTV), universes, turf cutting, and staging locations</li>
+        <li>Volunteer &amp; staff training (canvass, phones, data entry, packet build)</li>
+        <li>Scripts and message discipline (doors, phones, texts, digital)</li>
+        <li>GOTV operations (chase, visibility, poll coverage planning)</li>
+        <li>Basic comms support (social content guidance, rapid response structure)</li>
+        <li>Office systems (weekly goals, pipeline, reporting, and accountability)</li>
+      </ul>
+    </section>
+
     <hr class="sectionRule" aria-hidden="true">
 
-    <section class="panel panelHasCornerLogo" aria-label="Schedule">
-      <h2 class="h2">Schedule</h2>
+    <section class="panel pricingWrap" aria-label="Pricing">
+      <h2 class="h2">Pricing</h2>
 
-      <img
-        src="./assets/Calendly_logo.png"
-        alt="Calendly"
-        class="panelLogo"
-      />
+      <h3>Wedding Films</h3>
+      <div class="pricingGrid twoCol" aria-label="Wedding tiers">
+        <div class="pricingCard">
+          <h4>Bronze — $2,400</h4>
+          <ul>
+            <li>Up to 6 hours</li>
+            <li>5–7 min highlight film</li>
+            <li>14-day turnaround</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Silver — $3,200</h4>
+          <ul>
+            <li>Up to 8 hours</li>
+            <li>Full speeches edit</li>
+            <li>6–8 min cinematic film</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Gold — $4,200</h4>
+          <ul>
+            <li>Up to 10 hours</li>
+            <li>Multi-cam ceremony</li>
+            <li>Drone + social teaser</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Platinum — $5,200</h4>
+          <ul>
+            <li>Up to 12 hours</li>
+            <li>Specialty cameras</li>
+            <li>Ceremony + speeches</li>
+            <li>48-hr teaser</li>
+            <li>7-day delivery</li>
+          </ul>
+        </div>
+      </div>
+
+      <p class="miniNote">Additional hour: $125 (applies beyond the booked package)</p>
+
+      <h3>Event &amp; Promotional</h3>
+      <div class="pricingGrid twoCol" aria-label="Event pricing">
+        <div class="pricingCard">
+          <h4>Half Day — $600</h4>
+          <ul>
+            <li>Up to 4 hours</li>
+            <li>60–90 sec highlight</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Full Day — $1,000</h4>
+          <ul>
+            <li>Up to 8 hours</li>
+            <li>2–3 min highlight</li>
+          </ul>
+        </div>
+      </div>
+
+      <h3>Corporate &amp; Small Business</h3>
+      <div class="pricingGrid" aria-label="Business pricing">
+        <div class="pricingCard">
+          <h4>Brand Promo — $1,200</h4>
+          <ul>
+            <li>Interview + b-roll</li>
+            <li>2–3 min film</li>
+            <li>Social cut</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Executive Interview — $850</h4>
+          <ul>
+            <li>Up to 2 hours</li>
+            <li>1–2 min polished edit</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Monthly Content — from $2,500</h4>
+          <ul>
+            <li>1 filming day</li>
+            <li>3–5 edited videos</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Custom Package — quote</h4>
+          <ul>
+            <li>Multi-day / multi-location / recurring</li>
+          </ul>
+        </div>
+      </div>
+
+      <h3>Documentary &amp; Editing</h3>
+      <div class="pricingGrid twoCol" aria-label="Documentary and editing">
+        <div class="pricingCard">
+          <h4>Editing — $85/hr</h4>
+          <ul>
+            <li>5-hour minimum per project phase</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Full Documentary Support — quote</h4>
+          <ul>
+            <li>Development → post support tailored to scope</li>
+          </ul>
+        </div>
+      </div>
+
+      <h3>Political Consulting</h3>
+      <div class="pricingGrid" aria-label="Political consulting pricing">
+        <div class="pricingCard">
+          <h4>Strategy Intensive (1 Hour) — $250</h4>
+          <ul>
+            <li>Win number, targeting, field plan, next steps</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Municipal Retainer — $3,000–6,000 / month</h4>
+          <ul>
+            <li>Plan + training + reporting cadence</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>State Legislative Retainer — $5,000–10,000 / month</h4>
+          <ul>
+            <li>Ops buildout + weekly goals + GOTV</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Congressional Retainer — $10,000–20,000+ / month</h4>
+          <ul>
+            <li>Full-scale field + ops systems</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="panel" aria-label="Schedule">
+      <div class="panelHeaderRow">
+        <h2 class="h2">Schedule</h2>
+        <img src="./assets/Calendly_logo.png" alt="Calendly" class="panelLogoHorizontal" />
+      </div>
 
       <div
         class="calendly-inline-widget calendly-frame"
@@ -319,16 +420,11 @@
       <script async src="https://assets.calendly.com/assets/external/widget.js"></script>
     </section>
 
-    <hr class="sectionRule" aria-hidden="true">
-
-    <section class="panel panelHasCornerLogo" aria-label="Payment">
-      <h2 class="h2">Payment</h2>
-
-      <img
-        src="./assets/Stripe_Logo,_revised_2016.svg.png"
-        alt="Stripe"
-        class="panelLogo"
-      />
+    <section class="panel" aria-label="Payment">
+      <div class="panelHeaderRow">
+        <h2 class="h2">Payment</h2>
+        <img src="./assets/Stripe_Logo,_revised_2016.svg.png" alt="Stripe" class="panelLogoHorizontal" />
+      </div>
 
       <p>
         For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, or Google Pay.
