--- a/services.html
+++ b/services.html
@@ -78,6 +78,187 @@
       </div>
     </section>
 
+    <section class="panel" aria-label="Political Consulting">
+      <h2 class="h2">Political Consulting</h2>
+
+      <div class="openRow" aria-label="Availability">
+        <span class="openDot" aria-hidden="true"></span>
+        <span>Open to work</span>
+      </div>
+
+      <p>
+        I support campaigns, committees, and independent candidates with practical, field-tested strategy. If you need a clean plan, strong execution, and someone who can build the infrastructure and train the team, I can help.
+      </p>
+
+      <ul class="links">
+        <li>Win number + targeting (what it takes to win, who to talk to, and how often)</li>
+        <li>Field plan (persuasion → GOTV), universes, turf cutting, and staging locations</li>
+        <li>Volunteer &amp; staff training (canvass, phones, data entry, packet build)</li>
+        <li>Scripts and message discipline (doors, phones, texts, digital)</li>
+        <li>GOTV operations (chase, visibility, poll coverage planning)</li>
+        <li>Basic comms support (social content guidance, rapid response structure)</li>
+        <li>Office systems (weekly goals, pipeline, reporting, and accountability)</li>
+      </ul>
+    </section>
+
+    <hr class="sectionRule" aria-hidden="true">
+
+    <section class="panel pricingWrap" aria-label="Pricing">
+      <h2 class="h2">Pricing</h2>
+
+      <h3>Wedding Films</h3>
+      <div class="pricingGrid twoCol" aria-label="Wedding tiers">
+        <div class="pricingCard">
+          <h4>Bronze — $2,400</h4>
+          <ul>
+            <li>Up to 6 hours</li>
+            <li>5–7 min highlight film</li>
+            <li>14-day turnaround</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Silver — $3,200</h4>
+          <ul>
+            <li>Up to 8 hours</li>
+            <li>Full speeches edit</li>
+            <li>6–8 min cinematic film</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Gold — $4,200</h4>
+          <ul>
+            <li>Up to 10 hours</li>
+            <li>Multi-cam ceremony</li>
+            <li>Drone + social teaser</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Platinum — $5,200</h4>
+          <ul>
+            <li>Up to 12 hours</li>
+            <li>Specialty cameras</li>
+            <li>Ceremony + speeches</li>
+            <li>48-hr teaser</li>
+            <li>7-day delivery</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="pricingGrid" aria-label="Wedding add-ons">
+        <div class="pricingCard">
+          <h4>Additional hour — $125</h4>
+          <ul>
+            <li>Applies beyond the booked package</li>
+          </ul>
+        </div>
+      </div>
+
+      <h3>Event &amp; Promotional</h3>
+      <div class="pricingGrid twoCol" aria-label="Event pricing">
+        <div class="pricingCard">
+          <h4>Half Day — $600</h4>
+          <ul>
+            <li>Up to 4 hours</li>
+            <li>60–90 sec highlight</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Full Day — $1,000</h4>
+          <ul>
+            <li>Up to 8 hours</li>
+            <li>2–3 min highlight</li>
+          </ul>
+        </div>
+      </div>
+
+      <h3>Corporate &amp; Small Business</h3>
+      <div class="pricingGrid" aria-label="Business pricing">
+        <div class="pricingCard">
+          <h4>Brand Promo — $1,200</h4>
+          <ul>
+            <li>Interview + b-roll</li>
+            <li>2–3 min film</li>
+            <li>Social cut</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Executive Interview — $850</h4>
+          <ul>
+            <li>Up to 2 hours</li>
+            <li>1–2 min polished edit</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Monthly Content — from $2,500</h4>
+          <ul>
+            <li>1 filming day</li>
+            <li>3–5 edited videos</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Custom Package — quote</h4>
+          <ul>
+            <li>Multi-day / multi-location / recurring</li>
+          </ul>
+        </div>
+      </div>
+
+      <h3>Documentary &amp; Editing</h3>
+      <div class="pricingGrid twoCol" aria-label="Documentary and editing">
+        <div class="pricingCard">
+          <h4>Editing — $85/hr</h4>
+          <ul>
+            <li>5-hour minimum per project phase</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Full Documentary Support — quote</h4>
+          <ul>
+            <li>Development → post support tailored to scope</li>
+          </ul>
+        </div>
+      </div>
+
+      <h3>Political Consulting</h3>
+      <div class="pricingGrid" aria-label="Political consulting pricing">
+        <div class="pricingCard">
+          <h4>Strategy Intensive (1 Hour) — $250</h4>
+          <ul>
+            <li>Win number, targeting, field plan, next steps</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Municipal Retainer — $3,000–6,000 / month</h4>
+          <ul>
+            <li>Plan + training + reporting cadence</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>State Legislative Retainer — $5,000–10,000 / month</h4>
+          <ul>
+            <li>Ops buildout + weekly goals + GOTV</li>
+          </ul>
+        </div>
+
+        <div class="pricingCard">
+          <h4>Congressional Retainer — $10,000–20,000+ / month</h4>
+          <ul>
+            <li>Full-scale field + ops systems</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     <section class="panel" aria-label="Smart Intake Form">
       <h2 class="h2">Smart Intake Form</h2>
       <p class="muted small">
@@ -229,180 +410,6 @@
         <button id="submitBtn" type="submit">Send</button>
         <p id="formStatus" class="formStatus" role="status" aria-live="polite"></p>
       </form>
-    </section>
-
-    <section class="panel" aria-label="Political Consulting">
-      <h2 class="h2">Political Consulting</h2>
-
-      <div class="openRow" aria-label="Availability">
-        <span class="openDot" aria-hidden="true"></span>
-        <span>Open to work</span>
-      </div>
-
-      <p>
-        I support campaigns, committees, and independent candidates with practical, field-tested strategy. If you need a clean plan, strong execution, and someone who can build the infrastructure and train the team, I can help.
-      </p>
-
-      <ul class="links">
-        <li>Win number + targeting (what it takes to win, who to talk to, and how often)</li>
-        <li>Field plan (persuasion → GOTV), universes, turf cutting, and staging locations</li>
-        <li>Volunteer &amp; staff training (canvass, phones, data entry, packet build)</li>
-        <li>Scripts and message discipline (doors, phones, texts, digital)</li>
-        <li>GOTV operations (chase, visibility, poll coverage planning)</li>
-        <li>Basic comms support (social content guidance, rapid response structure)</li>
-        <li>Office systems (weekly goals, pipeline, reporting, and accountability)</li>
-      </ul>
-    </section>
-
-    <hr class="sectionRule" aria-hidden="true">
-
-    <section class="panel pricingWrap" aria-label="Pricing">
-      <h2 class="h2">Pricing</h2>
-
-      <h3>Wedding Films</h3>
-      <div class="pricingGrid twoCol" aria-label="Wedding tiers">
-        <div class="pricingCard">
-          <h4>Bronze — $2,400</h4>
-          <ul>
-            <li>Up to 6 hours*</li>
-            <li>5–7 min highlight film</li>
-            <li>14-day turnaround</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Silver — $3,200</h4>
-          <ul>
-            <li>Up to 8 hours*</li>
-            <li>Full speeches edit</li>
-            <li>6–8 min cinematic film</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Gold — $4,200</h4>
-          <ul>
-            <li>Up to 10 hours*</li>
-            <li>Multi-cam ceremony</li>
-            <li>Drone + social teaser</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Platinum — $5,200</h4>
-          <ul>
-            <li>Up to 12 hours*</li>
-            <li>Specialty cameras</li>
-            <li>Ceremony + speeches</li>
-            <li>48-hr teaser</li>
-            <li>7-day delivery</li>
-          </ul>
-        </div>
-      </div>
-
-      <p class="miniNote"><br /><i></i>*Additional hour: $125 (applies beyond the booked package)</i></p>
-
-      <h3>Event &amp; Promotional</h3>
-      <div class="pricingGrid twoCol" aria-label="Event pricing">
-        <div class="pricingCard">
-          <h4>Half Day — $600</h4>
-          <ul>
-            <li>Up to 4 hours</li>
-            <li>60–90 sec highlight</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Full Day — $1,000</h4>
-          <ul>
-            <li>Up to 8 hours</li>
-            <li>2–3 min highlight</li>
-          </ul>
-        </div>
-      </div>
-
-      <h3>Corporate &amp; Small Business</h3>
-      <div class="pricingGrid" aria-label="Business pricing">
-        <div class="pricingCard">
-          <h4>Brand Promo — $1,200</h4>
-          <ul>
-            <li>Interview + b-roll</li>
-            <li>2–3 min film</li>
-            <li>Social cut</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Executive Interview — $850</h4>
-          <ul>
-            <li>Up to 2 hours</li>
-            <li>1–2 min polished edit</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Monthly Content — from $2,500</h4>
-          <ul>
-            <li>1 filming day</li>
-            <li>3–5 edited videos</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Custom Package — quote</h4>
-          <ul>
-            <li>Multi-day / multi-location / recurring</li>
-          </ul>
-        </div>
-      </div>
-
-      <h3>Documentary &amp; Editing</h3>
-      <div class="pricingGrid twoCol" aria-label="Documentary and editing">
-        <div class="pricingCard">
-          <h4>Editing — $85/hr</h4>
-          <ul>
-            <li>5-hour minimum per project phase</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Full Documentary Support — quote</h4>
-          <ul>
-            <li>Development → post support tailored to scope</li>
-          </ul>
-        </div>
-      </div>
-
-      <h3>Political Consulting</h3>
-      <div class="pricingGrid" aria-label="Political consulting pricing">
-        <div class="pricingCard">
-          <h4>Strategy Intensive (1 Hour) — $250</h4>
-          <ul>
-            <li>Win number, targeting, field plan, next steps</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Municipal Retainer — $3,000–6,000 / month</h4>
-          <ul>
-            <li>Plan + training + reporting cadence</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>State Legislative Retainer — $5,000–10,000 / month</h4>
-          <ul>
-            <li>Ops buildout + weekly goals + GOTV</li>
-          </ul>
-        </div>
-
-        <div class="pricingCard">
-          <h4>Congressional Retainer — $10,000–20,000+ / month</h4>
-          <ul>
-            <li>Full-scale field + ops systems</li>
-          </ul>
-        </div>
-      </div>
     </section>
 
     <section class="panel" aria-label="Schedule">
